; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_gx.c___GXOverflowHandler.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_gx.c___GXOverflowHandler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_gxoverflowsuspend = common dso_local global i32 0, align 4
@_gxoverflowcount = common dso_local global i32 0, align 4
@GX_DISABLE = common dso_local global i32 0, align 4
@GX_ENABLE = common dso_local global i32 0, align 4
@GX_TRUE = common dso_local global i32 0, align 4
@GX_FALSE = common dso_local global i32 0, align 4
@_gxcurrentlwp = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @__GXOverflowHandler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__GXOverflowHandler() #0 {
  %1 = load i32, i32* @_gxoverflowsuspend, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %14, label %3

3:                                                ; preds = %0
  store i32 1, i32* @_gxoverflowsuspend, align 4
  %4 = load i32, i32* @_gxoverflowcount, align 4
  %5 = add nsw i32 %4, 1
  store i32 %5, i32* @_gxoverflowcount, align 4
  %6 = load i32, i32* @GX_DISABLE, align 4
  %7 = load i32, i32* @GX_ENABLE, align 4
  %8 = call i32 @__GX_WriteFifoIntEnable(i32 %6, i32 %7)
  %9 = load i32, i32* @GX_TRUE, align 4
  %10 = load i32, i32* @GX_FALSE, align 4
  %11 = call i32 @__GX_WriteFifoIntReset(i32 %9, i32 %10)
  %12 = load i32, i32* @_gxcurrentlwp, align 4
  %13 = call i32 @LWP_SuspendThread(i32 %12)
  br label %14

14:                                               ; preds = %3, %0
  ret void
}

declare dso_local i32 @__GX_WriteFifoIntEnable(i32, i32) #1

declare dso_local i32 @__GX_WriteFifoIntReset(i32, i32) #1

declare dso_local i32 @LWP_SuspendThread(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
